--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,13 @@ spring:
 #        show_sql: true
         format_sql: true
 
+  data:
+    web:
+      pageable:
+        default-page-size: 10  # 기본 page 사이즈 글로벌 설정
+        max-page-size: 2000  # 최대 page 사이즈
+#        one-indexed-parameters: true  # page 1부터 시작
+
 logging.level:
   org.hibernate.SQL: debug
 #  org.hibernate.type: trace
